Fix broken suggestions overflow

--- a/src/styles/AddableModifiableTagList.module.css
+++ b/src/styles/AddableModifiableTagList.module.css
@@ -4,7 +4,7 @@
 }
 
 .inputContainer {
-    width: 200px;
+    width: 182px;
 }
 
 .buttonContainer {
